package cl.duoc.speedfast.interfaces;

public interface Cancelable {
    void cancelar();
}